# 3D_Curvix

./: .gitmodules  3D_Edge_Sketch_Settings.yaml  CMakeLists.txt  README.md
Edge_Reconst/: CMakeLists.txt  EdgeClusterer.cpp  EdgeClusterer.hpp  EdgeSketch_Core.cpp  EdgeSketch_Core.hpp  NViewsCertifier.cpp  NViewsCertifier.h  NViewsClass.cpp  NViewsUtils.cpp  NViewsUtils.h  PairEdgeHypo.cpp  PairEdgeHypo.hpp  definitions.h  edge_mapping.cpp  edge_mapping.hpp  file_reader.cpp  file_reader.hpp  generatePointCloud.cpp  getOrientationList.cpp  getOrientationList.hpp  getReprojectedEdgel.cpp  getReprojectedEdgel.hpp  getSupportedEdgels.cpp  getSupportedEdgels.hpp  mvt.cpp  mvt.hpp  util.cpp  util.hpp
cmd/: CMakeLists.txt  main.cpp
configs/: 3D_Curvix_ABC_NEF.yaml  3D_Curvix_DTU.yaml
datasets/ABC-NEF/00000006/curvelets/: Curvelets_0_t1.txt  Curvelets_0_t16.txt  Curvelets_0_t32.txt  Curvelets_0_t4.txt  Curvelets_0_t8.txt  Curvelets_10_t1.txt  Curvelets_10_t16.txt  Curvelets_10_t2.txt  Curvelets_10_t32.txt  Curvelets_10_t4.txt  Curvelets_10_t8.txt  Curvelets_11_t1.txt  Curvelets_11_t16.txt  Curvelets_11_t2.txt  Curvelets_11_t32.txt  Curvelets_11_t4.txt  Curvelets_11_t8.txt  Curvelets_12_t1.txt  Curvelets_12_t2.txt  Curvelets_12_t32.txt  Curvelets_12_t4.txt  Curvelets_12_t8.txt  Curvelets_13_t1.txt  Curvelets_13_t16.txt  Curvelets_13_t32.txt  Curvelets_13_t4.txt  Curvelets_13_t8.txt  Curvelets_14_t1.txt  Curvelets_14_t16.txt  Curvelets_14_t2.txt  Curvelets_14_t32.txt  Curvelets_14_t4.txt  Curvelets_14_t8.txt  Curvelets_15_t1.txt  Curvelets_15_t16.txt  Curvelets_15_t2.txt  Curvelets_15_t4.txt  Curvelets_15_t8.txt  Curvelets_16_t1.txt  Curvelets_16_t16.txt  (+232 more)
evaluation/: eval_main.py  eval_util.py  gen_GT_curve_points.py
feature_detection_and_matching/python/: feature_detection.ipynb
files/: line_connections.txt  line_noisy_points.txt  line_noisy_tangents.txt
refine_ABC_NEF_camera_poses/: getProjectionError.m  refine_camera_poses_main.m
test/: CMakeLists.txt  test_functions.cpp
test/test_data/: connectivity_graph.txt  curve_indices_for_merging.txt  curves_from_connectivity_graph.txt
test/test_include/: test_GT_edge_pair.hpp  test_alignment.hpp  test_connectivity_graph.hpp  test_curve_merging.hpp  test_edge_NCC.hpp  test_edge_SIFT_desc.hpp  test_edge_clustering.hpp  test_epipolar_correction.hpp
visualization/: cluster_wedge_visualization.m  compare_correction.m  draw_match.m  fast_multiview_triangulation_mex.mexa64  new_merge.m  new_tangent.m  plot3d.m  plotEdgeIterationForces.m  plot_2d_blue_red.m  plot_3D_edge_graph.m  plot_3D_edge_sketch.asv  plot_3D_edge_sketch.m  plot_3D_edge_sketch_w_orientation.m  plot_3D_edge_tangent.asv  plot_3D_edge_tangent.m  plot_3d_edges_original.m  plot_3d_group.m  plot_3d_tangent.m  plot_3d_with_color.m  plot_after_align_graph.m  plot_aligned.m  plot_cluster.m  plot_corresponding_edges_across_views.m  plot_cubic.m  plot_curve_join.m  plot_curves.m  plot_edge.m  plot_edge_alignment.m  plot_edge_clustering_test.m  plot_edge_connectivity.m  plot_edges.asv  plot_edges.m  plot_epipolar_correction.m  plot_epipolar_tangent.m  plot_epipolar_wedge.m  plot_frequency.m  plot_graph.m  plot_graph_tangent.m  plot_hypo1_hypo2.m  plot_multiple_corresponding_edges_across_views.m  (+9 more)
